--- a/views/cadastro/demandaAbc.html
+++ b/views/cadastro/demandaAbc.html
@@ -2,13 +2,18 @@
 {{=form_pesq.custom.begin}}
 <div class="row">
     <div class="col-md-3">
+        <div class="form-group">
         {{=form_pesq.custom.label.abc}}
         {{=form_pesq.custom.widget.abc}}
+        </div>
     </div>
     <div class="col-md-3">
+        <div class="form-group">
         {{=form_pesq.custom.label.tipo}}
         {{=form_pesq.custom.widget.tipo}}
+        </div>
     </div>
+
     <div class="col-md-3">
         <h3></h3>
         {{=form_pesq.custom.submit}}
