--- a/views/cadastro/produtos.html
+++ b/views/cadastro/produtos.html
@@ -1,11 +1,9 @@
+{{left_sidebar_enabled=True,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h6>Produtos</h6></div>
-            <div class="panel-body">
-                {{=formProdutos}}
-            </div>
-        </div>
-    </div>
+	<div class="page-header text-info">
+		<h1>PRODUTOS <small>Lista de Produtos</small></h1>
+	</div>
+    	{{=formProdutos}}
 </div>
