--- a/views/cadastro/cliente.html
+++ b/views/cadastro/cliente.html
@@ -1,71 +1,75 @@
 {{extend 'layout.html'}}
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h4>Cadastro de Clientes</h4></div>
-        <div class="panel-body">
-            <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#home">Dados Cadastrais</a></li>
-                    <li><a data-toggle="tab" href="#menu1">Endereços</a></li>
-                    <li><a data-toggle="tab" href="#menu2">Contatos</a></li>
-                    <li><a data-toggle="tab" href="#menu3">Demandas</a></li>
-                </ul>
-            <div class="tab-content">
-                <div id="home" class="tab-pane fade in active">
-                    {{=formCliente.custom.begin}}
-                    <div class="well">
-                        <div class="row">
-                            <div class="col-md-6">
-                                {{=formCliente.custom.label.nome}}
-                                {{=formCliente.custom.widget.nome}}
-                            </div>
-                            <div class="col-md-6">
-                                {{=formCliente.custom.label.razao}}
-                                {{=formCliente.custom.widget.razao}}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                {{=formCliente.custom.label.tipo}}
-                                {{=formCliente.custom.widget.tipo}}
-                            </div>
-                            <div class="col-md-4">
-                                {{=formCliente.custom.label.cnpj_cpf}}
-                                {{=formCliente.custom.widget.cnpj_cpf}}
-
-                            </div>
-                            <div class="col-md-4">
-                                {{=formCliente.custom.label.ie_rg}}
-                                {{=formCliente.custom.widget.ie_rg}}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <p></p>
-                        </div>
-                    </div>
-                    <div class="panel panel-info">
-                        <div class="panel-body">
-                            <div class="right">
-                                {{=formCliente.custom.submit}}
-                                {{=btnNovo}}
-                                {{=btnVoltar}}
-                                {{=btnExcluir}}
-                            </div>
-                        </div>
-                    </div>
-                    {{=formCliente.custom.end}}
-                </div>
-                <div id="menu1" class="tab-pane fade">
-                    {{=formEnderecos}}
-                </div>
-                <div id="menu2" class="tab-pane fade">
-                    {{=formContatos}}
-                </div>
-                <div id="menu3" class="tab-pane fade">
-                    {{=formDemandas}}
-                </div>
-            </div>
-        </div>
+  <div class="page-header text-info">
+    <h1>CLIENTES <small>Cadastro de Clientes</small></h1>
+    <div class="btn-group btn-group-xs" role="group" aria-label="...">  
+      {{=btnNovo}}
+      {{=btnVoltar}}
     </div>
+  </div>  
+  <ul class="nav nav-pills">
+      <li class="active"><a data-toggle="tab" href="#home">Dados Cadastrais</a></li>
+          <li><a data-toggle="tab" href="#menu1">Endereços</a></li>
+          <li><a data-toggle="tab" href="#menu2">Contatos</a></li>
+          <li><a data-toggle="tab" href="#menu3">Demandas</a></li>
+      </ul>
+  <div class="tab-content">
+      <div id="home" class="tab-pane fade in active">
+          {{=formCliente.custom.begin}}
+          
+          <div class="row">
+              <div class="col-md-6">
+                  <div class="form-group">
+                  {{=formCliente.custom.label.nome}}
+                  {{=formCliente.custom.widget.nome}}
+                  </div>
+              </div>
+              <div class="col-md-6">
+                  <div class="form-group">
+                  {{=formCliente.custom.label.razao}}
+                  {{=formCliente.custom.widget.razao}}
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-md-4">
+                <div class="form-group">
+                  {{=formCliente.custom.label.tipo}}
+                  {{=formCliente.custom.widget.tipo}}
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="form-group">
+                  {{=formCliente.custom.label.cnpj_cpf}}
+                  {{=formCliente.custom.widget.cnpj_cpf}}
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="form-group">
+                  {{=formCliente.custom.label.ie_rg}}
+                  {{=formCliente.custom.widget.ie_rg}}
+                </div>
+              </div>
+          </div>
+         
+          <hr>
+          <div class="btn-group btn-group-sm" role="group">  
+              {{=formCliente.custom.submit}}
+              {{=btnExcluir}}
+          </div>
+          <hr>
+          {{=formCliente.custom.end}}
+      </div>
+      <div id="menu1" class="tab-pane fade">
+          {{=formEnderecos}}
+      </div>
+      <div id="menu2" class="tab-pane fade">
+          {{=formContatos}}
+      </div>
+      <div id="menu3" class="tab-pane fade">
+          {{=formDemandas}}
+      </div>
+  </div>
 </div>
 
 <script type="text/javascript">
