--- a/views/cadastro/clienteEnderecos.html
+++ b/views/cadastro/clienteEnderecos.html
@@ -1,50 +1,55 @@
 {{if formEnderecos.create_form or formEnderecos.update_form:}}
     {{=formEnderecos[1].custom.begin}}
-    <div class="well">
-        <div class="row">
-            <div class="col-md-4">
+    
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
                 {{=formEnderecos[1].custom.label.tipo}}
                 {{=formEnderecos[1].custom.widget.tipo}}
             </div>
-            <div class="col-md-8">
+        </div>
+        <div class="col-md-8">
+            <div class="form-group">
                 {{=formEnderecos[1].custom.label.endereco}}
                 {{=formEnderecos[1].custom.widget.endereco}}
             </div>
         </div>
-        <div class="row">
-            <p></p>
-            <div class="col-md-4">
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
                 {{=formEnderecos[1].custom.label.bairro}}
                 {{=formEnderecos[1].custom.widget.bairro}}
             </div>
-            <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
                 {{=formEnderecos[1].custom.label.cidade}}
                 {{=formEnderecos[1].custom.widget.cidade}}
             </div>
-            <div class="col-md-2">
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
                 {{=formEnderecos[1].custom.label.estado}}
                 {{=formEnderecos[1].custom.widget.estado}}
             </div>
-            <div class="col-md-2">
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
                 {{=formEnderecos[1].custom.label.cep}}
                 {{=formEnderecos[1].custom.widget.cep}}
             </div>
         </div>
     </div>
-    <div class="panel panel-info">
-        <div class="panel-body">
-            <div class="right">
-                {{=formEnderecos[1].custom.submit}}
-                {{=btnVoltar}}
-                {{=btnExcluir}}
-            </div>
-        </div>
+    <hr>
+    <div class="btn-group btn-group-sm" role="group">  
+        {{=formEnderecos[1].custom.submit}}
+        {{=btnVoltar}}
+        {{=btnExcluir}}
     </div>
     {{=formEnderecos[1].custom.end}}
 {{else:}}
-    <div class="well">
-        {{=formEnderecos}}
-    </div>
+    {{=formEnderecos}}
 {{pass}}
 
 <script type="text/javascript">
