--- a/views/cadastro/demandas.html
+++ b/views/cadastro/demandas.html
@@ -1,11 +1,8 @@
-{{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
+{{left_sidebar_enabled=True,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h4>Demandas</h4></div>
-            <div class="panel-body">
-                {{=formDemandas}}
-            </div>
-        </div>
-    </div>
+	<div class="page-header text-info">
+		<h1>DEMANDAS <small>Cadastro de Demandas</small></h1>
+	</div>
+    {{=formDemandas}}
 </div>
