--- a/views/cadastro/planoContas.html
+++ b/views/cadastro/planoContas.html
@@ -1,48 +1,44 @@
+{{left_sidebar_enabled=True,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h4>Plano de Contas</h4></div>
-            <div class="panel-body">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#home">Nível 1</a></li>
-                        <li><a data-toggle="tab" href="#menu1">Nível 2</a></li>
-                        <li><a data-toggle="tab" href="#menu2">Nível 3</a></li>
-                       
-                </ul>
-                <div class="tab-content">
-                    <div id="home" class="tab-pane fade in active">
-                        <div class="well">
-                            {{if formPc1.create_form or formPc1.update_form:}}
-                                {{=formPc1[1].custom.begin}}
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        {{=formPc1[1].custom.label.conta}}
-                                        {{=formPc1[1].custom.widget.conta}}
-                                    </div>  
-                                </div>
-                                
-                                <div class="right" style="margin-top: 30PX; ">
-                                    {{=formPc1[1].custom.submit}}
-                                    {{=voltar('planoContas')}}
-                                    {{if formPc1.update_form:}}
-                                        {{=novo('planoContas/new/planoContas')}}
-                                        {{=excluir('#')}}
-                                    {{pass}}
-                                </div>
-                                {{=formPc1[1].custom.end}}
-                            {{else:}}
-                                {{=formPc1}}
-                            {{pass}}
-                        </div>
-                    </div>
-                    <div id="menu1" class="tab-pane fade">
-                        {{=loadPc2}}
-                    </div>
-                    <div id="menu2" class="tab-pane fade">
-                        {{=loadPc3}}
-                    </div>
+    <div class="page-header text-info">
+        <h1>CONTAS <small>Plano de Contas</small></h1>
+      </div>  
+    <ul class="nav nav-pills">
+        <li class="active"><a data-toggle="tab" href="#home">Nível 1</a></li>
+            <li><a data-toggle="tab" href="#menu1">Nível 2</a></li>
+            <li><a data-toggle="tab" href="#menu2">Nível 3</a></li>
+           
+    </ul>
+    <div class="tab-content">
+        <div id="home" class="tab-pane fade in active">
+            {{if formPc1.create_form or formPc1.update_form:}}
+                {{=formPc1[1].custom.begin}}
+                <div class="row">
+                    <div class="col-md-6">
+                        {{=formPc1[1].custom.label.conta}}
+                        {{=formPc1[1].custom.widget.conta}}
+                    </div>  
                 </div>
-            </div>
+                <hr>
+                <div class="btn-group btn-group-sm" role="group">  
+                    {{=formPc1[1].custom.submit}}
+                    {{=voltar('planoContas')}}
+                    {{if formPc1.update_form:}}
+                        {{=novo('planoContas/new/planoContas')}}
+                        {{=excluir('#')}}
+                    {{pass}}
+                </div>
+                {{=formPc1[1].custom.end}}
+            {{else:}}
+                {{=formPc1}}
+            {{pass}}
+        </div>     
+        <div id="menu1" class="tab-pane fade">
+            {{=loadPc2}}
+        </div>
+        <div id="menu2" class="tab-pane fade">
+            {{=loadPc3}}
         </div>
     </div>
 </div>
