--- a/views/cadastro/unidade.html
+++ b/views/cadastro/unidade.html
@@ -1,3 +1,4 @@
+{{left_sidebar_enabled=True,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 <div class="container">
     {{if formUnidade.create_form or formUnidade.update_form:}}
