--- a/views/obra/atividade_itens.html
+++ b/views/obra/atividade_itens.html
@@ -1,41 +1,14 @@
     {{if gridItens.create_form or gridItens.update_form:}}
-    {{=gridItens[1].custom.begin}}
-        <div class="well">
-            <div class="row">
-                 <div class="col-md-6">
-                     {{=gridItens[1].custom.label.composicao}}
-                     {{=gridItens[1].custom.widget.composicao}}
-                 </div>
-                 <div class="col-md-6">
-                     {{=gridItens[1].custom.label.insumo}}
-                     {{=gridItens[1].custom.widget.insumo}}
-                 </div>
-                 <div class="col-md-2">
-                    {{=gridItens[1].custom.label.quantidade}}
-                    {{=gridItens[1].custom.widget.quantidade}}
-                    </div>
-            </div>
+        {{=gridItens[1].custom.begin}}    
+        <div class="row">
+             {{=campo(6,gridItens[1].custom.label.composicao,gridItens[1].custom.widget.composicao)}}
+             {{=campo(6,gridItens[1].custom.label.insumo,gridItens[1].custom.widget.insumo)}}
+             {{=campo(2,gridItens[1].custom.label.quantidade,gridItens[1].custom.widget.quantidade)}}                
         </div>
-        <div class="panel panel-info">
-            <div class="panel-body">
-                <div class="right">
-                    {{=gridItens[1].custom.submit}}
-                    {{=voltar1('atividadesitens')}}
-                    {{if gridItens.update_form:}}
-                        {{=excluir('#')}}
-                    {{pass}}
-                </div>
-            </div>
-        </div>
+        <hr>
+        {{=btnRodape(gridItens[1].custom.submit,btnVoltar,btnExcluir)}}
         {{=gridItens[1].custom.end}}
     {{else:}}
-            <p></p>
-            {{=gridItens}}
-            <p></p>
-            <div class="panel panel-info">
-                <div class="panel-body">
-                    <div class="right">{{=voltar2()}}</div>
-                </div>
-            </div>
-
+        {{=gridItens}}
+        <hr>
     {{pass}}
