--- a/views/obra/atividades.html
+++ b/views/obra/atividades.html
@@ -1,10 +1,5 @@
 {{extend 'layout.html'}}
 <div class="container">
-    <div class="panel panel-info">
-        <div class="panel-heading"><h6>Atividades</h6></div>
-            <div class="panel-body">
-                {{=gridAtividades}}
-            </div>
-        </div>
-    </div>
+	{{=titulo("TAREFAS ","Lista de Tarefas")}}
+	{{=gridAtividades}}
 </div>
