--- a/views/obra/demandas.html
+++ b/views/obra/demandas.html
@@ -1,8 +1,7 @@
 {{left_sidebar_enabled=True,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
+
 <div class="container">
-	<div class="page-header text-info">
-		<h1>DEMANDAS <small>Cadastro de Demandas</small></h1>
-	</div>
+	{{=titulo("DEMANDAS ","Lista de Demandas")}}
     {{=formDemandas}}
 </div>
