--- a/views/obra/demanda.html
+++ b/views/obra/demanda.html
@@ -1,8 +1,7 @@
-
 {{extend 'layout.html'}}
 <div class="container">
     
-    {{=titulo("TAREFAS ","Cadastro de Tarefas",btnNovo,btnVoltar)}}
+    {{=titulo("DEMANDAS ","Cadastro de Demandas",btnNovo,btnVoltar)}}
     
     <ul class="nav nav-pills">
         <li class="active"><a data-toggle="tab" href="#home">Dados da Demanda</a></li>
