--- a/views/relatorios/gerar_abc.html
+++ b/views/relatorios/gerar_abc.html
@@ -1,10 +1,11 @@
-<h1>teste</h1>
+{{=resumo}}
 <table id="curvaabc" class="display" cellspacing="0" width="100%">
     <thead>
         <tr>
             <th>Pos</th>
             <th>Descricão</th>
             <th>Quantidade</th>
+            <th>Custo</th>
             <th>Valor</th>
             <th>Total</th>
             <th>Porcentagem</th>
@@ -16,11 +17,12 @@
         <tr>
             <td>{{=r.id}}</td>
             <td>{{=r.descricao}}</td>
-            <td>{{=r.quantidade}}</td>
-            <td>{{=r.valor}}</td>
-            <td>{{=r.total}}</td>
-            <td>{{=r.porcentagem}}</td>
-            <td>{{=r.acumulado}}</td>
+            <td class="text-right">{{=r.quantidade}}</td>
+            <td class="text-right">{{=round(r.valor/r.quantidade,2)}}</td>
+            <td class="text-right">{{=r.valor}}</td>
+            <td class="text-right">{{=r.total}}</td>
+            <td class="text-right">{{=r.porcentagem}}</td>
+            <td class="text-right">{{=r.acumulado}}</td>
         </tr>
         {{pass}}
     </tbody>
